<?xml version="1.0"?>
<package format="2">
  <name>deepersense_behaviour_change_pkg</name>
  <version>0.0.0</version>
  <description>AUV behaviour change package</description>

  <maintainer email="valerio.franchi@udg.edu">Valerio Franchi</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <export>
  </export>
</package>
