<?xml version="1.0"?>
<package format="2">
  <name>deepersense_vis_pkg</name>
  <version>0.0.0</version>
  <description>Visualisation package</description>

  <maintainer email="valerio.franchi@udg.edu">Valerio Franchi</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
