<?xml version="1.0"?>
<package format="2">
  <name>deepersense_waterfall_gen_pkg</name>
  <version>0.0.0</version>
  <description>Waterfall generation package</description>

  <maintainer email="valerio.franchi@udg.edu">Valerio Franchi</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>tf2</build_depend>
  <build_export_depend>tf2</build_export_depend>
  <exec_depend>tf2</exec_depend>

  <build_depend>tf2_ros</build_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
  </export>

</package>
